# snap-kombination

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
examples/: example.json  max_efficiency.json
src/: analyse.rs  condition.rs  condition_count.rs  cost_efficiency.rs  deck.rs  input.rs  main.rs  permutation_optimized.rs  permutation_simple.rs  placement.rs  tests.rs
